[project]
name = "codecademy-dsa-python"
dynamic = ["version"]
description = "data structures and algorithms course from codecademy"
requires-python = ">=3.12"
readme = "README.md"


[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "ruff>=0.6.8",
    "uv>=0.4.17",
]

[tool.pytest.ini_options]
addopts = "-s --doctest-modules"
