[project]
name = "codecademy-dsa-python"
dynamic = ["version"]
description = "data structures and algorithms course from codecademy"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "polars>=1.32.2",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "scipy>=1.15.3",
]


[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "ruff>=0.6.8",
    "uv>=0.4.17",
]

[tool.pytest.ini_options]
addopts = "-s --doctest-modules"
