[project]
name = "codecademy-dsa-python"
dynamic = ["version"]
description = "data structures and algorithms course from codecademy"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "duckdb>=1.3.2",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "polars>=1.32.2",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.43",
]


[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "ruff>=0.6.8",
    "uv>=0.4.17",
]

[tool.pytest.ini_options]
addopts = "-s --doctest-modules"


[tool.ruff.format]

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]

extend-select = [
    "A",  # All auto-fixes
    "B",  # Bug risk
    "C",  # Complexity
    "E",  # Error
    "F",  # Formatting
    "I",  # Import-related
    "N",  # Naming convention
    "Q",  # Quality
    "W",  # Warning
    "SIM",
    "UP",
    "LOG",
    "G",
    "PD",
    "ERA",
    "C4",
    'EM',
    "INT",
    "ISC",
    "ICN",
    "PIE",
    "T20",
    "PYI",
    "PTH",
    "PERF",
   "UP",
   "FURB",
   "RUF",
   'PT'


]

extend-ignore = [
    "E501",  # Line too long
]